Fix padding bug at top of page on mobile Shop page.

--- a/app/assets/stylesheets/_spree_admin_overrides.scss
+++ b/app/assets/stylesheets/_spree_admin_overrides.scss
@@ -5,6 +5,10 @@ body[data-hook="body"] {
 
   @media screen and (max-width: 500px) {
     padding: 120px 0 0;
+
+    &.spree-store {
+      padding: 50px 0 0;
+    }
   }
 
   #content {
